[gd_scene load_steps=7 format=3 uid="uid://155xx7s6y6ta"]

[ext_resource type="Script" uid="uid://bp8fx4goaewu1" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://be8qbmt0fe144" path="res://scenes/player.tscn" id="2_sugp2"]
[ext_resource type="Script" uid="uid://cuw7qvo7u78ur" path="res://scripts/code_executor.gd" id="3_sugp2"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_sugp2"]
number_color = Color(0.78431374, 0, 0, 1)
symbol_color = Color(0.7921569, 0.05882353, 0.43137255, 1)
function_color = Color(0, 0.8352941, 0.8235294, 1)
member_variable_color = Color(0, 0.827451, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(62, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(569, 646)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wfyh")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
split_offset = 500

[node name="CodePanel" type="PanelContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(570, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/CodePanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HSplitContainer/CodePanel/VBoxContainer"]
layout_mode = 2
text = "Code Editor"
horizontal_alignment = 1

[node name="CodeInput" type="CodeEdit" parent="HSplitContainer/CodePanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
syntax_highlighter = SubResource("CodeHighlighter_sugp2")
highlight_all_occurrences = true
highlight_current_line = true
draw_control_chars = true
draw_tabs = true
draw_spaces = true
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
line_folding = true
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_highlight_matching = true

[node name="RunButton" type="Button" parent="HSplitContainer/CodePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Run Code"

[node name="OutputLabel" type="Label" parent="HSplitContainer/CodePanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
text = "Ready !"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GamePanel" type="PanelContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(570, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Level" type="Node2D" parent="HSplitContainer/GamePanel"]
position = Vector2(154, 1)

[node name="Player" parent="HSplitContainer/GamePanel/Level" instance=ExtResource("2_sugp2")]
position = Vector2(35, 393)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HSplitContainer/GamePanel/Level/Player"]
shape = SubResource("RectangleShape2D_sugp2")

[node name="StaticBody2D" type="StaticBody2D" parent="HSplitContainer/GamePanel/Level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HSplitContainer/GamePanel/Level/StaticBody2D"]
position = Vector2(130.5, 322)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="CodeExecutor" type="Node" parent="."]
script = ExtResource("3_sugp2")
